# karpathy_tutorial

./: .gitignore  README.md  pyproject.toml
src/: backprop_ninja.ipynb  makemore_acts.ipynb  makemore_mlp.ipynb  micrograd.ipynb  wavenet.ipynb
src/gpt/: bigram.py  gpt.ipynb  gpt.py  gpt_dev.ipynb  gpt_v2.py  positional_encoding.ipynb
